crates/fig-lexer/tests/snapshots/integration_tests__variables__let_with_type.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Func
- Ident: let_typed
- LParen
- RParen
- Arrow
- Ident: ok
- Newline
- Indent
- Let
- Ident: a
- Colon
- I32
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "10"
    suffix: ~
- Newline
- Let
- Ident: b
- Colon
- U64
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "9999999999"
    suffix: ~
- Newline
- Let
- Ident: c
- Colon
- F64
- Eq
- FloatLiteral:
    digits: "2.71828"
    exponent: ~
    suffix: ~
- Newline
- Let
- Ident: d
- Colon
- Bool
- Eq
- "False"
- Newline
- Let
- Ident: e
- Colon
- U8
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "255"
    suffix: ~
- Newline
- Let
- Ident: f
- Colon
- I64
- Eq
- Minus
- IntegerLiteral:
    base: Decimal
    digits: "1"
    suffix: ~
- Newline
- Let
- Ident: g
- Colon
- USize
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Newline
- Let
- Ident: h
- Colon
- ISize
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "100"
    suffix: ~
- Newline
- Pass
- Newline
- Dedent
